encoding/jsonschema/testdata/txtar/invalid_pattern.txtar
Invalid patterns should result in failure

-- schema.json --
{
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "pattern": 1234
}
-- out/decode/extract --
ERROR:
invalid string:
    schema.json:3:5
